Arkiv for workgroups (#29)
* Using FilterSet to pass authKey everywhere.

FilterSetService handles legacy authkey property.

Upgraded to Java 17, Spring Boot 2.4 and Gradle 7.1.

* Error handling in DocumentService.

Fixed error in FilterSetService.

* Arkiv for Workgroups (tm)

* Skjerming på korrespondansepart.

Pågående støtte til avskriving.

* Latest and greates case defaults.